# keyd

./: .gitignore  Makefile  meson.build  meson.options
docs/: keyd.scdoc
include/: config.h  device.h  ini.h  keyboard.h  keyd.h  keys.h  log.h  strutil.h  usb-gadget.h
keyd/: config.c  daemon.c  device.c  evloop.c  ini.c  ipc.c  keyboard.c  keyd.c  keys.c  log.c  macro.c  meson.build  monitor.c  strutil.c  util.c
keyd/vkbd/: stdout.c  uinput.c  usb-gadget.c
src/: config.c  ini.c  ini.h
test/: meson.build
test/full/: meson.build  run.sh
test/unit/: meson.build
test/unit/strutil/: meson.build
test/unit/strutil/nexttoken/: basic.c  meson.build
